--- a/rcore/汇编程序设计.md
+++ b/rcore/汇编程序设计.md
@@ -3,3 +3,20 @@
 ## 数据结构
 加入我们要做一个简单的汉诺塔， 这里只有2个盘子
 <div style="text-align: center;"> <img src="https://s2.loli.net/2023/10/17/KTLafIR4ktSdBzD.png" alt="" style="display: block; margin: 0 auto;"> </div>
+
+如果用 D <>, <> 表示将 <> 移至 <> 上
+`D 1 C` 表示将 1 移至 C 上
+在这里 `D` 就是我们要做的事情， 也就是操作， `1` 和 `C` 都是 所需要的数据，所以代码其实是操作和数据
+
+这里我们可以引出 `指令`
+
+## 指令
+
+这里以 RISC-V 32 位指令集为例
+![image.png](https://s2.loli.net/2023/10/18/kufN1PzmnQFZ2YT.png)
+
+- `opcode` 操作数
+- `rd` 目标寄存器
+- `rs` 源寄存器
+- `imm` 立即数
+
