--- a/rcore/汇编程序设计.md
+++ b/rcore/汇编程序设计.md
@@ -13,10 +13,13 @@
 ## 指令
 
 这里以 RISC-V 32 位指令集为例
-![image.png](https://s2.loli.net/2023/10/18/kufN1PzmnQFZ2YT.png)
+![image.png](https://s2.loli.net/2023/10/22/oteFNl4idbAnWpg.png)
+
 
 - `opcode` 操作数
 - `rd` 目标寄存器
 - `rs` 源寄存器
 - `imm` 立即数
 
+
+`PC` 程序计数器， 记录储存的下一条运行指令位置。
